# todo_app

./: .env_bak  README.md  pyproject.toml
tests/: test_1_users.py  test_2_todos.py  todo_test.py
todo_app/: main.py  models.py  settings.py
todo_app/api/: deps.py  main.py
todo_app/api/routes/: login.py  todos.py  users.py
todo_app/core/: db.py  mock_db.py  security.py
